static/css/pages/jeux.css
/* ... */
label:has(input[type="radio"]:checked) {
    border: 1px solid #fff;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.questions {
    display: flex;
    gap: 10px;
}

.send-btn {
    border: none;
    background: transparent;
    padding: 2rem;
    cursor: pointer;
    margin-top: 1rem;
    margin-bottom: 1rem;
    border-radius: 10px;
    border: 1px solid #a68567;
}

.send-btn:hover {
    background: var(--primary-hover);
}

.total-questions {
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.question {
    margin-bottom: 1rem;
    font-size: 1rem;
}

.explication {
    background: url(../../images/background-explication.png);
    background-size: 100% 100%;
    background-repeat: repeat;
}

.correction {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.explication {
    width: 50%;
    padding: 5rem;
    margin-top: 30px;
    margin-bottom: 30px;
}

.explication h2 {
    font-size: 2rem;
}

.explication p {
    font-size: 1rem;
    padding: 2rem;
    color: #d4d4d4;
    text-align: left;
    font-family: sans-serif;
}

.quiz-start {
    margin: 50px;
}

.good-answer {
    font-size: 1rem;
}

.user-answer {
    font-size: 2rem;
}

.timer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1rem;
}

.timer p {
    font-size: 1.5rem;
    text-align: center;
    padding: 10px;
    width: 100px;
    color: #a68567;
    border: 1px solid #a68567;
    border-radius: 10px;
}

.timer span {
    color: #a68567;
}

.quiz-matiere .question{
    width: 50%;
    font-family: sans-serif;
}

/* quiz-end */

.quiz-end {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 3rem;
    max-width: 1000px;
}

.quiz-end h1 {
    margin-top: 2rem;
    font-size: 4rem;
}

.quiz-end p {
    margin-left: 20px;
    margin-right: 20px;
    text-align: center;
}

.quiz-end a {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.5rem;
    text-decoration: none;
    border: 1px solid #d4d4d4;
    padding: 10px;
    margin: 10px;
    border-radius: 10px;
}

.quiz-end a:hover {
    background: var(--primary-hover);
}

.score-patronus,
.score-maisons {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 10px;
    padding: 7rem;
    width: 100%;
    background-image: url(../../images/cadre-maisons-patronus.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.image-patronus,
.image-maison {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border: 1px solid #a68567;
}

.score-patronus h2,
.score-maison h2 {
    font-size: 2rem;
}


@media (max-width : 1400px) {
    .section-1 h1 {
        font-size: 1rem;
    }

    .global-case {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 10px;
    }

    .album {
        width: 90%;
    }

    .case .description.active {
        width: 100%;
        flex-direction: column;
        height: auto;
    }

    .description.active img {
        height: 150px;
        width: 150px;
    }

    .description.active p {
        font-size: 14px;
    }
}

@media (max-width : 1300px) {
    .explication {
        background: none;
        border: 1px solid var(--accent);
        padding: 10px;
        width: 100%;
    }

    label:nth-of-type(1) {
        background: none;
        border: 1px solid #fff;
        padding: 10px;
        width: 200px;
        height: 200px;
    }

    label:nth-of-type(2) {
        background: none;
        border: 1px solid #fff;
        padding: 10px;
        width: 200px;
        height: 200px;
    }

    label:nth-of-type(3) {
        background: none;
        border: 1px solid #fff;
        padding: 10px;
        width: 200px;
        height: 200px;
    }

    label:nth-of-type(4) {
        background: none;
        border: 1px solid #fff;
        padding: 10px;
        width: 200px;
        height: 200px;
    }

    .questions {
        display: flex;
    }

    label:nth-of-type(1):hover,
    label:nth-of-type(2):hover,
    label:nth-of-type(3):hover,
    label:nth-of-type(4):hover {
        background: var(--primary-hover);
        transition: .3s;
        transform: rotateX(10deg);
    }

    label:has(input[type="radio"]:checked) {
        background: var(--accent);
    }

    .send-btn{
        border: 1px solid #fff;
    }

}

@media (max-width : 1024px) {
    .score-patronus {
        padding: 1rem;
        background-image: none;
        width: 90%;
    }
}
/* ... */

